# ppe_detection_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_INSTALL.md  check_gpu.py  check_models.py  config.yaml  docker-compose.yml  install_ubuntu.sh  install_ubuntu_venv.sh  main.py  optimize_performance.sh  pyproject.toml  requirements.txt  run_ubuntu.sh  run_windows.bat  setup.py
core/: __init__.py  fusion_detector.py  person_matcher.py  pose_based_detector.py  pose_detector.py  ppe_detector.py  temporal_filter.py  tracker.py  zone_manager.py
docs/: GPU_CPU_GUIDE.md  INSTALLATION.md  MULTI_CAMERA_FUSION.md  PERFORMANCE_GUIDE.md  QUICKSTART.md  TRAINING_GUIDE.md  UBUNTU_PYTHON_312_FIX.md  UBUNTU_RTSP_TROUBLESHOOTING.md  USER_GUIDE.md
gui/: __init__.py  alert_widget.py  camera_connection_dialog.py  camera_widget.py  config_dialog.py  control_panel.py  fullscreen_widget.py  keypoint_config_widget.py  main_window.py  multi_camera_widget.py  ppe_class_config_widget.py  stats_widget.py  zone_editor_dialog.py
models/: __init__.py  model_config.py
scripts/: README.md  example_data.yaml  prepare_dataset.py  train_ppe_model.py  visualize_results.py
tests/: __init__.py  test_detection.py  test_gui.py
utils/: __init__.py  camera_config_manager.py  camera_manager.py  config_loader.py  database.py  detection_config_manager.py  device_selector.py  logger.py  model_downloader.py  notification.py  video_recorder.py
